build: enable jdk 14 preview features for test