@@ -22,8 +22,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
 
 	// Other consideration NoSQL Graph db like Neo4j
-	implementation 'org.springframework.data:spring-data-neo4j:latest.release'
-	implementation 'org.springframework.boot:spring-boot-starter-data-cassandra-reactive:2.3.4.RELEASE'
+	implementation 'org.springframework.data:spring-data-neo4j'
+	implementation 'org.springframework.boot:spring-boot-starter-data-cassandra-reactive'
 
 
 	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -52,4 +52,8 @@ test {
 // Enable records preview for JDK14
 tasks.withType(JavaCompile).each {
 	it.options.compilerArgs.add('--enable-preview')
+}
+
+tasks.withType(Test) {
+	jvmArgs += "--enable-preview"
 }
